--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
+    "api-routes": "^0.2.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "inquirer": "^8.2.4",
     "install": "^0.13.0",
+    "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
-    "mysql2": "^3.2.4",
+    "mysql2": "^3.3.0",
     "sequelize": "^6.31.1"
   }
 }
